# segVerHandler

./: .gitignore  README.md
doc/volsegSync_docs/: mkdocs.yml
doc/volsegSync_docs/docs/: changelog.md  development.md  index.md
segVerHandler/: __init__.py  commons.py  config.py  exceptions.py  kernel.py  koms.py  koms_service.py  manifest.py  pyproject.toml  quickviewer.py  segverhandler.py
segVerHandler/scripts/: analyse_data_volsegsync_instance.py  volsegSync_utils.py
volsegSync/: __init__.py  commons.py  config.py  kernel.py  koms.py  koms_service.py  manifest.py  pyproject.toml  quickviewer.py  volsegsync.py
volsegSync/scripts/: analyse_data_volsegsync_instance.py  volsegSync_utils.py
