[project]
name = "volsegsync"
version = "0.1.1"
description = "Volumen-Segmentation Sync: command-line utility for pairing, syncing, and verifying biomedical volumes and their segmentations."
authors = [
    {name = "William A. Romero R."}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.8.0"
dependencies = [
    "wxpython (==4.2.2)",
    "simpleitk (>=2.5.2,<3.0.0)",
    "matplotlib (>=3.8.0) ; python_version >= \"3.9\"",
    "matplotlib (==3.7.5) ; python_version < \"3.9\"",
    "click (>=8.2.1,<9.0.0) ; python_version >= \"3.10\"",
    "click (==8.1.8) ; python_version < \"3.10\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
volsegsync="volsegsync:cli"